--- a/arch/arm64/configs/exynos7885-gta3xl_defconfig
+++ b/arch/arm64/configs/exynos7885-gta3xl_defconfig
@@ -182,7 +182,7 @@ CONFIG_EPOLL=y
 CONFIG_SIGNALFD=y
 CONFIG_TIMERFD=y
 CONFIG_EVENTFD=y
-# CONFIG_BPF_SYSCALL is not set
+CONFIG_BPF_SYSCALL=y
 CONFIG_SHMEM=y
 CONFIG_AIO=y
 CONFIG_ADVISE_SYSCALLS=y
@@ -1000,7 +1000,7 @@ CONFIG_NET_CLS_U32=y
 # CONFIG_NET_CLS_RSVP6 is not set
 # CONFIG_NET_CLS_FLOW is not set
 # CONFIG_NET_CLS_CGROUP is not set
-# CONFIG_NET_CLS_BPF is not set
+CONFIG_NET_CLS_BPF=y
 # CONFIG_NET_CLS_FLOWER is not set
 CONFIG_NET_EMATCH=y
 CONFIG_NET_EMATCH_STACK=32
@@ -1021,7 +1021,7 @@ CONFIG_NET_ACT_MIRRED=y
 # CONFIG_NET_ACT_SKBEDIT is not set
 # CONFIG_NET_ACT_CSUM is not set
 # CONFIG_NET_ACT_VLAN is not set
-# CONFIG_NET_ACT_BPF is not set
+CONFIG_NET_ACT_BPF=y
 # CONFIG_NET_ACT_CONNMARK is not set
 # CONFIG_NET_CLS_IND is not set
 CONFIG_NET_SCH_FIFO=y
@@ -1043,7 +1043,7 @@ CONFIG_XPS=y
 # CONFIG_CGROUP_NET_CLASSID is not set
 CONFIG_NET_RX_BUSY_POLL=y
 CONFIG_BQL=y
-# CONFIG_BPF_JIT is not set
+CONFIG_BPF_JIT=y
 CONFIG_NET_FLOW_LIMIT=y
 
 #
@@ -5325,3 +5325,6 @@ CONFIG_ARCH_HAS_SG_CHAIN=y
 # KernelSU Next Configs
 CONFIG_KSU=y 
 CONFIG_KSU_WITH_KPROBES=n
+
+CONFIG_DISABLE_TRACE_PRINTK=y
+CONFIG_CGROUP_BPF=y
