--- a/arch/arm64/configs/exynos7885-gta3xl_defconfig
+++ b/arch/arm64/configs/exynos7885-gta3xl_defconfig
@@ -517,11 +517,11 @@ CONFIG_TIMA=y
 CONFIG_TIMA_LKMAUTH=y
 CONFIG_TIMA_LKM_BLOCK=y
 # CONFIG_TIMA_LKMAUTH_CODE_PROT is not set
-CONFIG_UH=y
-CONFIG_UH_RKP=y
-CONFIG_RKP_KDP=y
-CONFIG_RKP_NS_PROT=y
-CONFIG_RKP_DMAP_PROT=y
+CONFIG_UH=n
+CONFIG_UH_RKP=n
+CONFIG_RKP_KDP=n
+CONFIG_RKP_NS_PROT=n
+CONFIG_RKP_DMAP_PROT=n
 # CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE is not set
 
 #
@@ -4663,7 +4663,7 @@ CONFIG_QUOTACTL=y
 CONFIG_FUSE_FS=y
 # CONFIG_CUSE is not set
 CONFIG_FUSE_SUPPORT_STLOG=y
-# CONFIG_OVERLAY_FS is not set
+CONFIG_OVERLAY_FS=y
 
 #
 # Caches
@@ -5321,3 +5321,7 @@ CONFIG_OID_REGISTRY=y
 # CONFIG_SG_SPLIT is not set
 CONFIG_ARCH_HAS_SG_CHAIN=y
 # CONFIG_FPSIMD_CORRUPTION_DETECT is not set
+
+# KernelSU Next Configs
+CONFIG_KSU=y 
+CONFIG_KSU_WITH_KPROBES=n
