--- a/arch/arm64/configs/exynos7885-gta3xl_defconfig
+++ b/arch/arm64/configs/exynos7885-gta3xl_defconfig
@@ -505,11 +505,9 @@ CONFIG_RANDOMIZE_MODULE_REGION_FULL=y
 #
 # Boot options
 #
-CONFIG_CMDLINE="androidboot.selinux=permissive"
-CONFIG_CMDLINE_EXTEND=y
+CONFIG_CMDLINE=""
 
 # CONFIG_SECURITY_SELINUX_ALWAYS_ENFORCE is not set
-CONFIG_SECURITY_SELINUX_ALWAYS_PERMISSIVE=y
 # CONFIG_EFI is not set
 CONFIG_TIMA=y
 CONFIG_TIMA_LKMAUTH=y
